# 3i-Atlas-Gateway-Guide

./: .gitignore  BOOTLOADER.md  BOOTLOADER_v2.10.1.md  BOOTLOADER_v2.11.0.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bayesian_framework.json  conversation_starters.json  instructions.txt  kb_changelog.json  kb_updates_cumulative.json  knowledge_base_merged_v2.json  manifest.json  normalize_updates.js  refresh_release_signatures.js  sources.json  stress_test_framework.json  tags_index.json  verify_release_git_signature.js
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
PROMPTS/: guardian_prompt.md
docs/: FAQ.md  GOVERNANCE_OVERVIEW.md  aaiv_3I_ATLAS_paper_v1.tex  aaiv_agent_spec_v2.12.md  aaiv_protocol_v2.12.md  peer_review_grok_followup_v2_11_1.md  peer_review_grok_v2_11_1.md  peer_review_grok_v2_11_2.md  peer_review_human_v2_10_1.md  v2.11.2_NOTES.md
scripts/: axiom_add_physical_event.py  axiom_correlate.py  axiom_log_prediction.py  axiom_preflight.py  axiom_xdomain_002_add_physical.py  axiom_xdomain_002_adjudicate.py  axiom_xdomain_002_healthcheck.py  axiom_xdomain_002_lmstudio_cadence.py  axiom_xdomain_002_log_computational.py  axiom_xdomain_002_log_null.py  axiom_xdomain_002_log_prediction.py  validate_kb.js  (+12 more)
tools/axiom_guard/: AxiomAdvancedSpec.lean  INTEGRATION.md  README.md  pyproject.toml  run_axiom_guard.sh  run_demo.py  smoke_commands.txt  verification_summary.json
tools/axiom_guard/axiom_ai/: __init__.py  audit.py  classifier.py  cli.py
tools/axiom_guard/tests/: test_axiom_guard.py
(+54 files in other folders)
